--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="E:\certificates\CSE.jpg" Height="200px"></td>
+      <td><img src="CSE.jpg" Height="200px"></td>
       <td>
         <h1>Sachin.T</h1>
         <p><a href="https://en.wikipedia.org/wiki/Mechanical_engineering"><em>Mechanical</em> <strong> Engineer.</strong></a></p>
